--- a/settings.gradle
+++ b/settings.gradle
@@ -1,1 +1,1 @@
-include ':app', ':module_common', ':module_views', ':module_login', ':module_homepage', ':module_shoppingcart', ':module_order', ':module_me'
+include ':app', ':module_common'
